Corrección en collection to list inicialización