@@ -6,6 +6,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
@@ -66,7 +67,7 @@ public class ImplAutentificacionService  implements AutentificacionService{
 		);
 		logger.info("retornarListOrdenamiento listadoOrdenamiento" + gson.toJson(listadoOrdenamiento));
 
-		permisos=permisos.stream().map(e->{ e.setOrdenConfig(-1); return e ;}).toList();		
+		permisos=permisos.stream().map(e->{ e.setOrdenConfig(-1); return e ;}) .collect(Collectors.toList());	
 		int index=0;
 		for(Permiso e:permisos) {	
 			e.setOrdenConfig(-1);
